# Trio_KI_Abgabe

./: Readme.md
src/: Board.cpp  Board.h  Button.cpp  Button.h  CMakeLists.txt  Cell.cpp  Cell.h  GameAssistant.cpp  GameAssistant.h  GameConstants.cpp  GameObject.cpp  GameObject.h  GameOverScene.cpp  GameOverScene.h  GameRenderer.cpp  GameRenderer.h  GameSolver.cpp  GameSolver.h  GameState.cpp  GameState.h  GameTypes.h  GameplayScene.cpp  GameplayScene.h  MainMenuScene.cpp  MainMenuScene.h  NeuralNetworkAI.cpp  NeuralNetworkAI.h  OptionsScene.cpp  OptionsScene.h  Scene.cpp  Scene.h  TrioGame.cpp  TrioGame.h  UIComponent.cpp  UIComponent.h  config.h.in  main.cpp
